--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport"
 			content="width=device-width, user-scalable=no, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 		<meta http-equiv="X-UA-compatible" content="ie=edge">
-		<title>MARVEL FUTURE FIGHT</title>
+		<title>YONGKAI GITHUB IO</title>
     	<link rel="icon" type="image/ico" href="/app/images/logo.ico"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
